# ZTP

./: .gitignore  LICENSE  README.md
PO/po-2025-master/: .gitignore
PO/po-2025-master/W-03-NIM/: CMakeLists.txt  Gra.cpp  Gra.h  Gracz.cpp  Gracz.h  Plansza.cpp  Plansza.h  main.cpp
PO/po-2025-master/W-05-operatory/: CMakeLists.txt  main.cpp
PO/po-2025-master/W-07-arena/: ArenaManager.cpp  ArenaManager.h  CMakeLists.txt  Dwarf.cpp  Dwarf.h  Ogre.cpp  Ogre.h  Unit.cpp  Unit.h  Witcher.cpp  Witcher.h  main.cpp
PO/po-2025-master/W-08-sensors/: AlarmSystem.cpp  AlarmSystem.h  CMakeLists.txt  PressureSensor.cpp  PressureSensor.h  Sensor.cpp  Sensor.h  TemperatureSensor.cpp  TemperatureSensor.h  config.h.in  main.cpp
PO/po-2025-master/W-09-stack/: CMakeLists.txt  main-stack-t.cpp  stack-t.cpp  stack-t.h  stack.cpp
PO/po-2025-master/W-10-stl/: CMakeLists.txt  algo.cpp
Projekt-Labview/labview-master/: AbstractSink.cpp  AbstractSink.h  AbstractSource.h  AbstractTransform.h  CMakeLists.txt  Concatenate.h  DynamicModuleLink.h  HelloSource.h  LabView.h  Module.h  ModuleFactory.cpp  ModuleFactory.h  ModuleLink.h  NormalCoutSink.h  README.md  Signal.h  WorldSource.h  main.cpp
lista1/: CMakeLists.txt  Makefile  build.sh  sprawozdanie.md
lista1/lib/hello/: hello.cpp  hello.h
lista1/src/prog2/: main.cpp
lista2/: CMakeLists.txt  sprawozdanie.md
lista2/lib/tokenizer/: tokenizer.cpp  tokenizer.h
lista2/src/: main.cpp
lista2/tests/: CMakeLists.txt  test_tokenizer.cpp
lista3/: CMakeLists.txt
lista3/src/: main.cpp
lista4/: CMakeLists.txt  main.cpp  main.s  prog1.cpp  prog1.s  sprawozdanie.md
lista5/: CMakeLists.txt  prog1.cpp
lista6-STACK/: CMakeLists.txt  Stack.cpp  Stack.h  main.cpp
lista7/: main.cpp
